[package]
name = "evil_mount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "signal", "sync", "time"] }
walkdir = "2.4.0"
